[metadata]
name = sci-oer
version = 0.0.1
author = Marshall Asch
author_email = maasch@rogers.com
description = A cli application to help launch the sci-oer course container
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sci-oer/student-cli
project_urls =
    Bug Tracker = https://github.com/sci-oer/student-cli/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Intended Audience :: Developers
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: Education
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
  sci-oer = scioer.cli:main
